<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FIND物流</string>
    <!-- 登陆界面 -->
    <string name="login_identity">管理员</string>
    <string name="login_passWord">密码</string>
    <string name="login_remindName">邮箱/手机号</string>
    <string name="login_remindPwd">请输入密码</string>
    <string name="login_login">登陆</string>
    <string name="login_register">新用户注册</string>
    <string name="login_remeberInfo">记住信息</string>
    <!-- 注册界面 -->
    <string name="register_nickName">填写姓名</string>
    <string name="register_email">邮&#160;&#160;&#160;&#160;&#160;&#160;&#160;箱</string>
    <string name="register_phone">手&#160;&#160;&#160;&#160;&#160;&#160;&#160;机</string>
    <string name="register_password">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;码</string>
    <string name="register_password2">确认密码</string>
    <string name="register_site">选择站点</string>
    <string name="register_master">站长</string>
    <string name="register_couriers">快递员</string>
    <string name="register_secrecy">保密</string>
    <string name="register_commit">注册</string>
    <string name="register_remind">邮箱和手机至少填写一个</string>
    <!-- 刷新listview -->
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_first_label">拼命获取中\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <!-- new 刷新listview -->
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
    <!-- 订单状态 -->
    <string name="order_all">全部订单</string>
    <string name="order_waiting">待分配</string>
    <string name="order_done">已分配</string>
    <string name="order_sending">已发货</string>
    <string name="order_complete">已完成</string>
    <!-- 订单item -->
    <string name="order_number">订&#160;单&#160;&#160;号:</string>
    <string name="order_time">下单时间:</string>
    <string name="order_shop">收&#160;&#160;货&#160;&#160;人:</string>
    <string name="order_delivery_address">收货地址:</string>
    <string name="order_charge">订单金额:</string>
    <!-- 订单详细 -->
    <string name="order_info_buyer_name">收货人:</string>
    <string name="order_info_order_number">订单号:</string>
    <string name="order_info_order_time">下单时间:</string>
    <string name="order_info_delivery_adress">收货地址:</string>
    <string name="order_info_address">地址:</string>
    <string name="order_info_shop_name">店铺名称:</string>
    <string name="order_info_phone">电话:</string>
    <string name="order_info_goodslist">商品清单</string>
    <string name="order_info_goods_charge">单价</string>
    <string name="order_info_goods_number">数量</string>
    <string name="order_info_description">件商品，总商品金额:</string>
    <string name="order_info_freight">运费:</string>
    <string name="order_info_total">应付金额:</string>
    <string name="order_info_message">买家留言:</string>
    <string name="order_info_done">完成时间:</string>
    <string name="order_info_scanmap">查看地图</string>
    <string name="order_info_select">分配</string>
    <string name="order_info_serial_number">运单号:</string>
    <string name="order_info_appointment">预约时间:</string>
    <!-- 站长主界面 -->

    <string name="master_main_noAllocation">待分配订单</string>
    <string name="master_main_yesAllocation">已分配订单</string>
    <string name="master_main_compeleted">当日处理订单</string>
    <string name="master_main_previous">以往处理订单</string>
    <string name="master_main_evaluate">查看评价</string>

    <!-- 快递员主界面 -->

    <string name="couriers_main_noAllocation">待配送订单</string>
    <string name="couriers_main_compeleted">当日完成订单</string>
    <string name="couriers_main_previous">以往订单管理</string>
    <string name="couriers_main_evaluate">查看评价</string>
    <!-- images -->
    <string name="descr_image">images</string>

    <!-- chat -->
    <string name="text_ack_msg">已读</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">连接不到服务器，请稍后重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="voice">[语音]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">S</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <!-- couriers -->
    <string name="couriers_new">待处理</string>
    <string name="couriers_deliving">配送中</string>
    <string name="couriers_completed">已完成</string>
    <string name="couriers_rejected">已拒绝</string>
    <string name="couriers_cancled">已取消</string>

</resources>