<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/activity_couriers_main_noAllocation"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/master_layout_selector"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/couriers_main_noAllocation"
            android:textColor="#333333" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_couriers_main_compeleted"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/master_layout_selector"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/couriers_main_compeleted"
            android:textColor="#333333" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_couriers_main_previous"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/master_layout_selector"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/couriers_main_previous"
            android:textColor="#333333" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_couriers_main_evaluate"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/master_layout_selector"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/couriers_main_evaluate"
            android:textColor="#333333" />
    </LinearLayout>

</LinearLayout>