<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_top_background"
            android:gravity="center" >

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:gravity="center" >

                <TextView
                    android:id="@+id/activity_login_identity"
                    style="@style/login_textStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/login_identity" />
            </LinearLayout>

            <EditText
                android:id="@+id/activity_login_userName"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:hint="@string/login_remindName"
                android:singleLine="true"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bottom_background"
            android:gravity="center" >

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:gravity="center" >

                <TextView
                    style="@style/login_textStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/login_passWord" />
            </LinearLayout>

            <EditText
                android:id="@+id/activity_login_passWord"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:hint="@string/login_remindPwd"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/activity_login_remberPwd"
                style="@style/login_textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_remeberInfo" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" >

            <Button
                android:id="@+id/activity_login"
                style="@style/common_button_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_login"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" >

            <Button
                android:id="@+id/activity_login_register"
                style="@style/common_button_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_register" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>